Get initial app server up and running

--- a/projects/app1/index.dev.html
+++ b/projects/app1/index.dev.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-<app-component></app-component>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>App One</title>
+  </head>
+  <body>
+    <app-component></app-component>
+  </body>
 </html>
