Add sass to workspace

--- a/projects/project_two/index.dev.html
+++ b/projects/project_two/index.dev.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Project Two</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   </head>
   <body>
     <app-component></app-component>
