Update project one sass

--- a/projects/project_one/index.dev.html
+++ b/projects/project_one/index.dev.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>App One</title>
+    <title>Project One</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   </head>
   <body>
     <app-component></app-component>
